# k8s-pretty-logger

./: README.md  app.py  hello.py  jest.config.js  package-lock.json  package.json  prompt.txt  pyproject.toml  quickstart.sh  sample.env
api/: __init__.py  kubernetes_client.py
api/templates/: index.html
static/css/: style.css
static/js/: app.js
static/js/tests/: app.spec.js
tests/: conftest.py  test_app.py  test_kubernetes_client.py
