[project]
name = "k8s-pretty-logger"
version = "0.1.0"
description = "An MVP to visualize Kubernetes pod logs with real-time updates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3.0",
    "flask-socketio>=5.3.0",
    "kubernetes>=25.3.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "eventlet>=0.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0", # Added pytest-flask
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
